[gd_scene load_steps=19 format=4 uid="uid://dcb35jyyypes"]

[ext_resource type="PackedScene" uid="uid://op2vgs332sl1" path="res://Scenes/Player.tscn" id="1_iukft"]
[ext_resource type="Script" uid="uid://dgvbq33xvu4jj" path="res://Scripts/game.gd" id="1_wxwew"]
[ext_resource type="Texture2D" uid="uid://1wrgt147u2gv" path="res://Assets/Tileset/BasicWater.png" id="2_3so38"]
[ext_resource type="PackedScene" uid="uid://djjntmxsrmdje" path="res://Scenes/Machine.tscn" id="4_b2bpf"]
[ext_resource type="PackedScene" uid="uid://bp2kqfg5wtgjn" path="res://Scenes/inGameUI.tscn" id="5_b2bpf"]
[ext_resource type="Texture2D" uid="uid://3n7x6aclk3p7" path="res://Assets/Tileset/Grass_Cliff_Water.png" id="7_71axn"]
[ext_resource type="Material" uid="uid://cmbcfxlkxxnwq" path="res://addons/TileMapDual/ghost_material.tres" id="8_3so38"]
[ext_resource type="PackedScene" uid="uid://basc6pw3a3xco" path="res://Scenes/TileHighlighter.tscn" id="8_dahhg"]
[ext_resource type="Texture2D" uid="uid://jxl166i2c5jy" path="res://Assets/Tileset/Dirt_Grass.png" id="9_3cx6b"]
[ext_resource type="PackedScene" uid="uid://bsv706fbyf0ry" path="res://Scenes/MachineDashboard.tscn" id="9_bf53h"]
[ext_resource type="Script" uid="uid://cjk8nronimk5r" path="res://addons/TileMapDual/TileMapDual.gd" id="10_wxwew"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3cx6b"]
resource_name = "CollisionWater"
texture = ExtResource("2_3so38")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wxwew"]
resource_name = "WalkableWater"
texture = ExtResource("2_3so38")
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_acvyw"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_3cx6b")
sources/1 = SubResource("TileSetAtlasSource_wxwew")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dahhg"]
texture = ExtResource("7_71axn")
0:3/0 = 0
0:3/0/terrain_set = 0
0:3/0/terrain = 0
0:3/0/terrains_peering_bit/bottom_right_corner = 0
0:3/0/terrains_peering_bit/bottom_left_corner = 0
0:3/0/terrains_peering_bit/top_left_corner = 0
0:3/0/terrains_peering_bit/top_right_corner = 0
3:3/0 = 0
3:3/0/terrain_set = 0
3:3/0/terrains_peering_bit/bottom_right_corner = 0
3:3/0/terrains_peering_bit/bottom_left_corner = 0
3:3/0/terrains_peering_bit/top_left_corner = 1
3:3/0/terrains_peering_bit/top_right_corner = 0
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrains_peering_bit/bottom_right_corner = 0
0:2/0/terrains_peering_bit/bottom_left_corner = 0
0:2/0/terrains_peering_bit/top_left_corner = 0
0:2/0/terrains_peering_bit/top_right_corner = 1
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrains_peering_bit/bottom_right_corner = 0
1:2/0/terrains_peering_bit/bottom_left_corner = 0
1:2/0/terrains_peering_bit/top_left_corner = 1
1:2/0/terrains_peering_bit/top_right_corner = 1
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrains_peering_bit/bottom_right_corner = 0
0:0/0/terrains_peering_bit/bottom_left_corner = 1
0:0/0/terrains_peering_bit/top_left_corner = 0
0:0/0/terrains_peering_bit/top_right_corner = 0
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/terrains_peering_bit/bottom_right_corner = 0
3:2/0/terrains_peering_bit/bottom_left_corner = 1
3:2/0/terrains_peering_bit/top_left_corner = 1
3:2/0/terrains_peering_bit/top_right_corner = 0
2:3/0 = 0
2:3/0/terrain_set = 0
2:3/0/terrains_peering_bit/bottom_right_corner = 0
2:3/0/terrains_peering_bit/bottom_left_corner = 1
2:3/0/terrains_peering_bit/top_left_corner = 0
2:3/0/terrains_peering_bit/top_right_corner = 1
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrains_peering_bit/bottom_right_corner = 0
3:1/0/terrains_peering_bit/bottom_left_corner = 1
3:1/0/terrains_peering_bit/top_left_corner = 1
3:1/0/terrains_peering_bit/top_right_corner = 1
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/terrains_peering_bit/bottom_right_corner = 1
1:3/0/terrains_peering_bit/bottom_left_corner = 0
1:3/0/terrains_peering_bit/top_left_corner = 0
1:3/0/terrains_peering_bit/top_right_corner = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrains_peering_bit/bottom_right_corner = 1
0:1/0/terrains_peering_bit/bottom_left_corner = 0
0:1/0/terrains_peering_bit/top_left_corner = 1
0:1/0/terrains_peering_bit/top_right_corner = 0
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrains_peering_bit/bottom_right_corner = 1
1:0/0/terrains_peering_bit/bottom_left_corner = 0
1:0/0/terrains_peering_bit/top_left_corner = 0
1:0/0/terrains_peering_bit/top_right_corner = 1
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrains_peering_bit/bottom_right_corner = 1
2:2/0/terrains_peering_bit/bottom_left_corner = 0
2:2/0/terrains_peering_bit/top_left_corner = 1
2:2/0/terrains_peering_bit/top_right_corner = 1
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrains_peering_bit/bottom_right_corner = 1
3:0/0/terrains_peering_bit/bottom_left_corner = 1
3:0/0/terrains_peering_bit/top_left_corner = 0
3:0/0/terrains_peering_bit/top_right_corner = 0
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrains_peering_bit/bottom_right_corner = 1
2:0/0/terrains_peering_bit/bottom_left_corner = 1
2:0/0/terrains_peering_bit/top_left_corner = 1
2:0/0/terrains_peering_bit/top_right_corner = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrains_peering_bit/bottom_right_corner = 1
1:1/0/terrains_peering_bit/bottom_left_corner = 1
1:1/0/terrains_peering_bit/top_left_corner = 0
1:1/0/terrains_peering_bit/top_right_corner = 1
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 1
2:1/0/terrains_peering_bit/bottom_right_corner = 1
2:1/0/terrains_peering_bit/bottom_left_corner = 1
2:1/0/terrains_peering_bit/top_left_corner = 1
2:1/0/terrains_peering_bit/top_right_corner = 1

[sub_resource type="TileSet" id="TileSet_3so38"]
terrain_set_0/mode = 1
terrain_set_0/terrain_0/name = "<any>"
terrain_set_0/terrain_0/color = Color(0.93333334, 0.50980395, 0.93333334, 1)
terrain_set_0/terrain_1/name = "FG -Grass_Cliff_Water.png"
terrain_set_0/terrain_1/color = Color(0.5, 0.4375, 0.25, 1)
sources/0 = SubResource("TileSetAtlasSource_dahhg")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_acvyw"]
texture = ExtResource("9_3cx6b")
0:3/0 = 0
0:3/0/terrain_set = 0
0:3/0/terrain = 0
0:3/0/terrains_peering_bit/bottom_right_corner = 0
0:3/0/terrains_peering_bit/bottom_left_corner = 0
0:3/0/terrains_peering_bit/top_left_corner = 0
0:3/0/terrains_peering_bit/top_right_corner = 0
3:3/0 = 0
3:3/0/terrain_set = 0
3:3/0/terrains_peering_bit/bottom_right_corner = 0
3:3/0/terrains_peering_bit/bottom_left_corner = 0
3:3/0/terrains_peering_bit/top_left_corner = 1
3:3/0/terrains_peering_bit/top_right_corner = 0
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrains_peering_bit/bottom_right_corner = 0
0:2/0/terrains_peering_bit/bottom_left_corner = 0
0:2/0/terrains_peering_bit/top_left_corner = 0
0:2/0/terrains_peering_bit/top_right_corner = 1
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrains_peering_bit/bottom_right_corner = 0
1:2/0/terrains_peering_bit/bottom_left_corner = 0
1:2/0/terrains_peering_bit/top_left_corner = 1
1:2/0/terrains_peering_bit/top_right_corner = 1
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrains_peering_bit/bottom_right_corner = 0
0:0/0/terrains_peering_bit/bottom_left_corner = 1
0:0/0/terrains_peering_bit/top_left_corner = 0
0:0/0/terrains_peering_bit/top_right_corner = 0
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/terrains_peering_bit/bottom_right_corner = 0
3:2/0/terrains_peering_bit/bottom_left_corner = 1
3:2/0/terrains_peering_bit/top_left_corner = 1
3:2/0/terrains_peering_bit/top_right_corner = 0
2:3/0 = 0
2:3/0/terrain_set = 0
2:3/0/terrains_peering_bit/bottom_right_corner = 0
2:3/0/terrains_peering_bit/bottom_left_corner = 1
2:3/0/terrains_peering_bit/top_left_corner = 0
2:3/0/terrains_peering_bit/top_right_corner = 1
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrains_peering_bit/bottom_right_corner = 0
3:1/0/terrains_peering_bit/bottom_left_corner = 1
3:1/0/terrains_peering_bit/top_left_corner = 1
3:1/0/terrains_peering_bit/top_right_corner = 1
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/terrains_peering_bit/bottom_right_corner = 1
1:3/0/terrains_peering_bit/bottom_left_corner = 0
1:3/0/terrains_peering_bit/top_left_corner = 0
1:3/0/terrains_peering_bit/top_right_corner = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrains_peering_bit/bottom_right_corner = 1
0:1/0/terrains_peering_bit/bottom_left_corner = 0
0:1/0/terrains_peering_bit/top_left_corner = 1
0:1/0/terrains_peering_bit/top_right_corner = 0
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrains_peering_bit/bottom_right_corner = 1
1:0/0/terrains_peering_bit/bottom_left_corner = 0
1:0/0/terrains_peering_bit/top_left_corner = 0
1:0/0/terrains_peering_bit/top_right_corner = 1
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrains_peering_bit/bottom_right_corner = 1
2:2/0/terrains_peering_bit/bottom_left_corner = 0
2:2/0/terrains_peering_bit/top_left_corner = 1
2:2/0/terrains_peering_bit/top_right_corner = 1
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrains_peering_bit/bottom_right_corner = 1
3:0/0/terrains_peering_bit/bottom_left_corner = 1
3:0/0/terrains_peering_bit/top_left_corner = 0
3:0/0/terrains_peering_bit/top_right_corner = 0
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrains_peering_bit/bottom_right_corner = 1
2:0/0/terrains_peering_bit/bottom_left_corner = 1
2:0/0/terrains_peering_bit/top_left_corner = 1
2:0/0/terrains_peering_bit/top_right_corner = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrains_peering_bit/bottom_right_corner = 1
1:1/0/terrains_peering_bit/bottom_left_corner = 1
1:1/0/terrains_peering_bit/top_left_corner = 0
1:1/0/terrains_peering_bit/top_right_corner = 1
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 1
2:1/0/terrains_peering_bit/bottom_right_corner = 1
2:1/0/terrains_peering_bit/bottom_left_corner = 1
2:1/0/terrains_peering_bit/top_left_corner = 1
2:1/0/terrains_peering_bit/top_right_corner = 1

[sub_resource type="TileSet" id="TileSet_alh3a"]
terrain_set_0/mode = 1
terrain_set_0/terrain_0/name = "<any>"
terrain_set_0/terrain_0/color = Color(0.93333334, 0.50980395, 0.93333334, 1)
terrain_set_0/terrain_1/name = "FG -Dirt_Grass.png"
terrain_set_0/terrain_1/color = Color(0.5, 0.4375, 0.25, 1)
sources/0 = SubResource("TileSetAtlasSource_acvyw")

[node name="Game" type="Node2D"]
script = ExtResource("1_wxwew")

[node name="Player" parent="." instance=ExtResource("1_iukft")]
z_index = 10
y_sort_enabled = true

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(0, -8)
zoom = Vector2(0.5, 0.5)

[node name="Tilemaps" type="Node2D" parent="."]

[node name="WaterLayer" type="TileMapLayer" parent="Tilemaps"]
tile_set = SubResource("TileSet_acvyw")

[node name="Grass_Cliff_Water" type="TileMapLayer" parent="Tilemaps"]
material = ExtResource("8_3so38")
tile_map_data = PackedByteArray("AAD6//z/AAACAAEAAAD6//3/AAACAAEAAAD7//3/AAACAAEAAAD8//3/AAACAAEAAAD9//7/AAACAAEAAAD+//7/AAACAAEAAAD///7/AAACAAEAAAD///3/AAACAAEAAAAAAP3/AAACAAEAAAABAP3/AAACAAEAAAACAP3/AAACAAEAAAACAP7/AAACAAEAAAADAP7/AAACAAEAAAADAP//AAACAAEAAAADAAAAAAACAAEAAAACAAEAAAACAAEAAAACAAIAAAACAAEAAAABAAIAAAACAAEAAAAAAAIAAAACAAEAAAAAAAMAAAACAAEAAAD//wMAAAACAAEAAAD+/wMAAAACAAEAAAD9/wMAAAACAAEAAAD8/wMAAAACAAEAAAD7/wMAAAACAAEAAAD7/wIAAAACAAEAAAD6/wIAAAACAAEAAAD5/wIAAAACAAEAAAD4/wIAAAACAAEAAAD4/wEAAAACAAEAAAD4/wAAAAACAAEAAAD3/wAAAAACAAEAAAD3////AAACAAEAAAD3//7/AAACAAEAAAD3//3/AAACAAEAAAD3//z/AAACAAEAAAD4//z/AAACAAEAAAD5//z/AAACAAEAAAD/////AAACAAEAAAD//wAAAAACAAEAAAD//wEAAAACAAEAAAAAAAEAAAACAAEAAAAAAAAAAAACAAEAAAAAAP//AAACAAEAAAAAAP7/AAACAAEAAAADAAEAAAACAAEAAAADAAIAAAACAAEAAAADAAMAAAACAAEAAAADAAQAAAACAAEAAAACAAQAAAACAAEAAAABAAQAAAACAAEAAAAAAAUAAAACAAEAAAD//wUAAAACAAEAAAD+/wUAAAACAAEAAAD9/wUAAAACAAEAAAD9/wQAAAACAAEAAAD8/wQAAAACAAEAAAD7/wQAAAACAAEAAAD6/wQAAAACAAEAAAD5/wQAAAACAAEAAAD4/wQAAAACAAEAAAD3/wQAAAACAAEAAAD2/wQAAAACAAEAAAD1/wQAAAACAAEAAAABAAUAAAACAAEAAAACAAUAAAACAAEAAAADAAUAAAACAAEAAAD8/wYAAAACAAEAAAD7/wYAAAACAAEAAAD7/wUAAAACAAEAAAD6/wUAAAACAAEAAAD5/wUAAAACAAEAAAD4/wUAAAACAAEAAAD3/wUAAAACAAEAAAD2/wUAAAACAAEAAAD1/wYAAAACAAEAAAD2/wYAAAACAAEAAAD3/wYAAAACAAEAAAD4/wYAAAACAAEAAAD+/wcAAAACAAEAAAD9/wgAAAACAAEAAAD//wgAAAACAAEAAAD+/wkAAAACAAEAAAD9/wcAAAACAAEAAAD//wcAAAACAAEAAAD//wkAAAACAAEAAAD9/wkAAAACAAEAAAD8/wgAAAACAAEAAAD7/wgAAAACAAEAAAD6/wgAAAACAAEAAAD5/wgAAAACAAEAAAD4/wgAAAACAAEAAAD3/wgAAAACAAEAAAD2/wgAAAACAAEAAAAAAAcAAAACAAEAAAAAAAgAAAACAAEAAAAAAAkAAAACAAEAAAAAAAYAAAACAAEAAAABAAYAAAACAAEAAAACAAYAAAACAAEAAAADAAYAAAACAAEAAAADAAcAAAACAAEAAAADAAgAAAACAAEAAAADAAkAAAACAAEAAAACAAkAAAACAAEAAAABAAkAAAACAAEAAAD1/wgAAAACAAEAAAD0/wgAAAACAAEAAADz/wgAAAACAAEAAADy/wgAAAACAAEAAADx/wgAAAACAAEAAADw/wgAAAACAAEAAADv/wgAAAACAAEAAADu/wgAAAACAAEAAAD8/woAAAACAAEAAAD7/woAAAACAAEAAAD6/woAAAACAAEAAAD5/woAAAACAAEAAAD4/woAAAACAAEAAAD3/woAAAACAAEAAAD2/woAAAACAAEAAAD1/woAAAACAAEAAAD0/woAAAACAAEAAADz/woAAAACAAEAAADy/woAAAACAAEAAADx/woAAAACAAEAAADw/woAAAACAAEAAADv/woAAAACAAEAAADu/woAAAACAAEAAADt/woAAAACAAEAAAD9/woAAAACAAEAAAD+/woAAAACAAEAAAD//woAAAACAAEAAAAAAAoAAAACAAEAAAABAAoAAAACAAEAAAACAAoAAAACAAEAAAADAAoAAAACAAEAAAD6/wYAAAACAAEAAAD5/wYAAAACAAEAAAD0/wYAAAACAAEAAADz/wYAAAACAAEAAADy/wYAAAACAAEAAADx/wYAAAACAAEAAADw/wcAAAACAAEAAADt/wkAAAACAAEAAADs/woAAAACAAEAAADt/wgAAAACAAEAAADu/wcAAAACAAEAAADv/wcAAAACAAEAAADw/wYAAAACAAEAAADx/wUAAAACAAEAAADy/wUAAAACAAEAAADz/wQAAAACAAEAAAD0/wMAAAACAAEAAAD1/wIAAAACAAEAAAD2/wIAAAACAAEAAAD3/wEAAAACAAEAAADz/wUAAAACAAEAAAD0/wUAAAACAAEAAAD1/wUAAAACAAEAAAD0/wQAAAACAAEAAAD3/wIAAAACAAEAAAD0/wIAAAACAAEAAADy//z/AAACAAEAAADy//3/AAACAAEAAADy//7/AAACAAEAAADy////AAACAAEAAADy/wAAAAACAAEAAADz//z/AAACAAEAAADz//3/AAACAAEAAADz//7/AAACAAEAAADz////AAACAAEAAADz/wAAAAACAAEAAAD0//z/AAACAAEAAAD0//3/AAACAAEAAAD0//7/AAACAAEAAAD0////AAACAAEAAAD0/wAAAAACAAEAAAD1//z/AAACAAEAAAD1//3/AAACAAEAAAD1//7/AAACAAEAAAD1////AAACAAEAAAD1/wAAAAACAAEAAAD2//z/AAACAAEAAAD2//3/AAACAAEAAAD2//7/AAACAAEAAAD2////AAACAAEAAAD2/wAAAAACAAEAAAD3//j/AAAAAAMAAAD3//n/AAAAAAMAAAD3//r/AAAAAAMAAAD3//v/AAACAAEAAAD4//j/AAAAAAMAAAD4//n/AAAAAAMAAAD4//r/AAAAAAMAAAD4//v/AAACAAEAAAD4//3/AAACAAEAAAD5//j/AAAAAAMAAAD5//n/AAAAAAMAAAD5//r/AAAAAAMAAAD5//v/AAACAAEAAAD5//3/AAACAAEAAAD6//j/AAACAAEAAAD6//n/AAACAAEAAAD6//r/AAACAAEAAAD6//v/AAACAAEAAAD7//j/AAACAAEAAAD7//n/AAACAAEAAAD7//r/AAACAAEAAAD7//v/AAACAAEAAAD7//z/AAACAAEAAAD8//j/AAACAAEAAAD8//n/AAACAAEAAAD8//r/AAACAAEAAAD8//v/AAACAAEAAAD8//z/AAACAAEAAAD9//j/AAACAAEAAAD9//n/AAACAAEAAAD9//r/AAACAAEAAAD9//v/AAACAAEAAAD9//z/AAACAAEAAAD9//3/AAACAAEAAAD+//v/AAACAAEAAAD+//z/AAACAAEAAAD+//3/AAACAAEAAAD///v/AAACAAEAAAD///z/AAACAAEAAAABAPj/AAACAAEAAAABAPn/AAACAAEAAAABAPr/AAACAAEAAAABAPv/AAACAAEAAAABAPz/AAACAAEAAAACAPj/AAACAAEAAAACAPn/AAACAAEAAAACAPr/AAACAAEAAAACAPv/AAACAAEAAAACAPz/AAACAAEAAAAGAP3/AAACAAEAAAAGAP7/AAACAAEAAAAGAP//AAACAAEAAAAGAAAAAAACAAEAAAAGAAEAAAACAAEAAAAGAAIAAAACAAEAAAAHAP3/AAACAAEAAAAHAP7/AAACAAEAAAAHAP//AAACAAEAAAAHAAAAAAACAAEAAAAHAAEAAAACAAEAAAAHAAIAAAACAAEAAAAIAP3/AAACAAEAAAAIAP7/AAACAAEAAAAIAP//AAACAAEAAAAIAAAAAAACAAEAAAAIAAEAAAACAAEAAAAIAAIAAAACAAEAAAAJAP3/AAACAAEAAAAJAP7/AAACAAEAAAAJAP//AAACAAEAAAAJAAAAAAACAAEAAAAJAAEAAAACAAEAAAAJAAIAAAACAAEAAAAKAP3/AAACAAEAAAAKAP7/AAACAAEAAAAKAP//AAACAAEAAAAKAAAAAAACAAEAAAAKAAEAAAACAAEAAAAKAAIAAAACAAEAAAALAP3/AAACAAEAAAALAP7/AAACAAEAAAALAP//AAACAAEAAAALAAAAAAACAAEAAAALAAEAAAACAAEAAAALAAIAAAACAAEAAAAMAP3/AAACAAEAAAAMAP7/AAACAAEAAAAMAP//AAACAAEAAAAMAAAAAAACAAEAAAAMAAEAAAACAAEAAAAMAAIAAAACAAEAAAANAP3/AAACAAEAAAANAP7/AAACAAEAAAANAP//AAACAAEAAAANAAAAAAACAAEAAAANAAEAAAACAAEAAAANAAIAAAACAAEAAAAOAP3/AAACAAEAAAAOAP7/AAACAAEAAAAOAP//AAACAAEAAAAOAAAAAAACAAEAAAAOAAEAAAACAAEAAAAOAAIAAAACAAEAAAAEAP//AAACAAEAAAAFAP//AAACAAEAAAAEAAAAAAACAAEAAAAFAAAAAAACAAEAAAAGAAUAAAACAAEAAAAGAAYAAAACAAEAAAAGAAcAAAACAAEAAAAGAAgAAAACAAEAAAAGAAkAAAACAAEAAAAHAAUAAAACAAEAAAAHAAYAAAACAAEAAAAHAAcAAAACAAEAAAAHAAgAAAACAAEAAAAHAAkAAAACAAEAAAAIAAUAAAACAAEAAAAIAAYAAAACAAEAAAAIAAcAAAACAAEAAAAIAAgAAAACAAEAAAAIAAkAAAACAAEAAAAJAAUAAAACAAEAAAAJAAYAAAACAAEAAAAJAAcAAAACAAEAAAAJAAgAAAACAAEAAAAJAAkAAAACAAEAAAAKAAUAAAACAAEAAAAKAAYAAAACAAEAAAAKAAcAAAACAAEAAAAKAAgAAAACAAEAAAAKAAkAAAACAAEAAAALAAUAAAACAAEAAAALAAYAAAACAAEAAAALAAcAAAACAAEAAAALAAgAAAACAAEAAAALAAkAAAACAAEAAAAMAAUAAAACAAEAAAAMAAYAAAACAAEAAAAMAAcAAAACAAEAAAAMAAgAAAACAAEAAAAMAAkAAAACAAEAAAANAAUAAAACAAEAAAANAAYAAAACAAEAAAANAAcAAAACAAEAAAANAAgAAAACAAEAAAANAAkAAAACAAEAAAAOAAUAAAACAAEAAAAOAAYAAAACAAEAAAAOAAcAAAACAAEAAAAOAAgAAAACAAEAAAAOAAkAAAACAAEAAAAEAAcAAAACAAEAAAAFAAcAAAACAAEAAAAEAAgAAAACAAEAAAAFAAgAAAACAAEAAAAGAAoAAAACAAEAAAAHAAoAAAACAAEAAAAIAAoAAAACAAEAAAAJAAoAAAACAAEAAAAKAAoAAAACAAEAAAALAAoAAAACAAEAAAAMAAoAAAACAAEAAAANAAoAAAACAAEAAAAOAAoAAAACAAEAAAD+/wIAAAACAAEAAAD//wIAAAACAAEAAAABAAMAAAACAAEAAAACAAMAAAACAAEAAAD+/wQAAAACAAEAAAD//wQAAAACAAEAAAAAAAQAAAACAAEAAAD8/wUAAAACAAEAAAD+/wgAAAACAAEAAAADAPj/AAACAAEAAAADAPn/AAACAAEAAAADAPr/AAACAAEAAAADAPv/AAACAAEAAAADAPz/AAACAAEAAAADAP3/AAACAAEAAAAGAPj/AAACAAEAAAAGAPn/AAACAAEAAAAGAPr/AAACAAEAAAAGAPv/AAACAAEAAAAHAPj/AAACAAEAAAAHAPn/AAACAAEAAAAHAPr/AAACAAEAAAAHAPv/AAACAAEAAAAIAPj/AAACAAEAAAAIAPn/AAACAAEAAAAIAPr/AAACAAEAAAAIAPv/AAACAAEAAAAJAPj/AAACAAEAAAAJAPn/AAACAAEAAAAJAPr/AAACAAEAAAAJAPv/AAACAAEAAAAKAPj/AAACAAEAAAAKAPn/AAACAAEAAAAKAPr/AAACAAEAAAAKAPv/AAACAAEAAAALAPj/AAACAAEAAAALAPn/AAACAAEAAAALAPr/AAACAAEAAAALAPv/AAACAAEAAAAMAPj/AAACAAEAAAAMAPn/AAACAAEAAAAMAPr/AAACAAEAAAAMAPv/AAACAAEAAAANAPj/AAACAAEAAAANAPn/AAACAAEAAAANAPr/AAACAAEAAAANAPv/AAACAAEAAAAOAPj/AAACAAEAAAAOAPn/AAACAAEAAAAOAPr/AAACAAEAAAAOAPv/AAACAAEAAAAEAPn/AAACAAEAAAAFAPn/AAACAAEAAAAEAPr/AAACAAEAAAAFAPr/AAACAAEAAAD+////AAACAAEAAAD+/wAAAAACAAEAAAD+/wEAAAACAAEAAAAEAAEAAAACAAEAAAAEAP7/AAACAAEAAAAEAAYAAAACAAEAAAAEAAkAAAACAAEAAAAFAAYAAAACAAEAAAAFAAkAAAACAAEAAAAFAAEAAAACAAEAAAAFAP7/AAACAAEAAADy/wQAAAACAAEAAADz/wEAAAACAAEAAADz/wIAAAACAAEAAADz/wMAAAACAAEAAADy/wEAAAACAAEAAADy/wIAAAACAAEAAADy/wMAAAACAAEAAADv//3/AAACAAEAAADv//7/AAACAAEAAADv////AAACAAEAAADw//3/AAACAAEAAADw//7/AAACAAEAAADw////AAACAAEAAADx//3/AAACAAEAAADx//7/AAACAAEAAADx////AAACAAEAAADw/wAAAAACAAEAAADx/wAAAAACAAEAAADx/wEAAAACAAEAAADx//z/AAACAAEAAADx//v/AAACAAEAAADy//v/AAACAAEAAADy//r/AAACAAEAAADz//r/AAACAAEAAAD0//r/AAACAAEAAAD0//n/AAACAAEAAAD0//j/AAACAAEAAAD1//j/AAAAAAMAAAD2//j/AAAAAAMAAAD1//n/AAAAAAMAAAD1//r/AAAAAAMAAAD1//v/AAACAAEAAAD2//r/AAAAAAMAAAD2//n/AAAAAAMAAAD0//v/AAACAAEAAAD2//v/AAACAAEAAAD3//f/AAACAAEAAAD4//f/AAACAAEAAAD5//f/AAACAAEAAAD6//f/AAACAAEAAAD7//f/AAACAAEAAAD8//f/AAACAAEAAAD9//f/AAACAAEAAAD9//b/AAACAAEAAAABAPb/AAACAAEAAAACAPb/AAACAAEAAAACAPf/AAACAAEAAAADAPf/AAACAAEAAAAEAPf/AAACAAEAAAAFAPf/AAACAAEAAAAGAPf/AAACAAEAAAAHAPf/AAACAAEAAAAIAPf/AAACAAEAAAADAPb/AAACAAEAAAAEAPb/AAACAAEAAAAFAPb/AAACAAEAAAAGAPb/AAACAAEAAAAEAPj/AAACAAEAAAAFAPj/AAACAAEAAAABAPf/AAACAAEAAADz//v/AAACAAEAAAAPAPv/AAACAAEAAAAPAPz/AAACAAEAAAAPAP3/AAACAAEAAAAPAAMAAAACAAEAAAAPAAIAAAACAAEAAAAPAAQAAAACAAEAAAAPAAUAAAACAAEAAADr/woAAAACAAEAAADq/woAAAACAAEAAADq/wkAAAACAAEAAADq/wgAAAACAAEAAADr/wcAAAACAAEAAADr/wYAAAACAAEAAADs/wYAAAACAAEAAADs/wUAAAACAAEAAADt/wUAAAACAAEAAADu/wUAAAACAAEAAADv/wUAAAACAAEAAADw/wQAAAACAAEAAADx/wQAAAACAAEAAADq/wcAAAACAAEAAADs/wcAAAACAAEAAADr/wgAAAACAAEAAADr/wkAAAACAAEAAADt/wYAAAACAAEAAADu/wYAAAACAAEAAADt/wcAAAACAAEAAADs/wgAAAACAAEAAADs/wkAAAACAAEAAADv/wYAAAACAAEAAADw/wUAAAACAAEAAADp/woAAAACAAEAAADp/wsAAAACAAEAAADq/wsAAAACAAEAAADu/wsAAAACAAEAAADu/wwAAAACAAEAAADv/wwAAAACAAEAAADw/wwAAAACAAEAAADw/w0AAAACAAEAAADx/w0AAAACAAEAAADy/w0AAAACAAEAAADz/w0AAAACAAEAAADz/wwAAAACAAEAAAD0/wwAAAACAAEAAAD1/wwAAAACAAEAAAD2/wwAAAACAAEAAAD2/wsAAAACAAEAAADv/wsAAAACAAEAAADw/wsAAAACAAEAAADx/wsAAAACAAEAAADy/wsAAAACAAEAAADz/wsAAAACAAEAAAD0/wsAAAACAAEAAAD1/wsAAAACAAEAAADx/wwAAAACAAEAAADy/wwAAAACAAEAAAD6/wsAAAACAAEAAAD7/wsAAAACAAEAAAD8/wwAAAACAAEAAAD9/wsAAAACAAEAAAD+/wsAAAACAAEAAAD8/wsAAAACAAEAAAD//wsAAAACAAEAAAD//wwAAAACAAEAAAAAAAwAAAACAAEAAAABAAwAAAACAAEAAAABAAsAAAACAAEAAAAAAAsAAAACAAEAAAD1//b/AAACAAEAAAD0//b/AAACAAEAAADz//f/AAACAAEAAADy//f/AAACAAEAAADx//f/AAACAAEAAADw//j/AAACAAEAAADw//n/AAACAAEAAADw//r/AAACAAEAAADx//r/AAACAAEAAADy//n/AAACAAEAAADz//n/AAACAAEAAADz//j/AAACAAEAAADy//j/AAACAAEAAADx//j/AAACAAEAAADx//n/AAACAAEAAAD1//f/AAACAAEAAAD0//f/AAACAAEAAAD2//f/AAACAAEAAAD2//b/AAACAAEAAAD3//b/AAACAAEAAAD4//b/AAACAAEAAAD5//b/AAACAAEAAAD6//X/AAACAAEAAAD7//X/AAACAAEAAAD8//X/AAACAAEAAAD9//X/AAACAAEAAAD8//b/AAACAAEAAAD7//b/AAACAAEAAAD6//b/AAACAAEAAAD8//T/AAACAAEAAAD9//T/AAACAAEAAAD9//P/AAACAAEAAAD+//P/AAACAAEAAAD///L/AAACAAEAAAAAAPP/AAACAAEAAAABAPP/AAACAAEAAAACAPP/AAACAAEAAAACAPT/AAACAAEAAAACAPX/AAACAAEAAAADAPX/AAACAAEAAAABAPT/AAACAAEAAAABAPX/AAACAAEAAAD///P/AAACAAEAAAD+//T/AAACAAEAAAAQAP3/AAACAAEAAAAQAP7/AAACAAEAAAARAP//AAACAAEAAAARAAAAAAACAAEAAAARAAEAAAACAAEAAAARAAIAAAACAAEAAAAQAAIAAAACAAEAAAAQAAMAAAACAAEAAAAPAP//AAACAAEAAAAPAAAAAAACAAEAAAAPAP7/AAACAAEAAAAPAAEAAAACAAEAAAAQAAEAAAACAAEAAAAQAAAAAAACAAEAAAAQAP//AAACAAEAAAALAAsAAAACAAEAAAAMAAwAAAACAAEAAAANAAwAAAACAAEAAAAOAAsAAAACAAEAAAAMAAsAAAACAAEAAAANAAsAAAACAAEAAADu//7/AAACAAEAAADu////AAACAAEAAADt////AAACAAEAAADt/wAAAAACAAEAAADs/wAAAAACAAEAAADs/wEAAAACAAEAAADs/wIAAAACAAEAAADs/wMAAAACAAEAAADs/wQAAAACAAEAAADu//3/AAACAAEAAADt//7/AAACAAEAAADs//7/AAACAAEAAADs////AAACAAEAAADr////AAACAAEAAADr/wAAAAACAAEAAADq/wEAAAACAAEAAADq/wIAAAACAAEAAADq/wMAAAACAAEAAADq/wQAAAACAAEAAADq/wUAAAACAAEAAADr/wUAAAACAAEAAADr/wEAAAACAAEAAADr/wIAAAACAAEAAADr/wMAAAACAAEAAADr/wQAAAACAAEAAADp/wEAAAACAAEAAADp/wAAAAACAAEAAADp////AAACAAEAAADp//7/AAACAAEAAADq//3/AAACAAEAAADq//z/AAACAAEAAADr//z/AAACAAEAAADs//v/AAACAAEAAADt//v/AAACAAEAAADu//v/AAACAAEAAADv//r/AAACAAEAAADw//v/AAACAAEAAADv//v/AAACAAEAAADv//z/AAACAAEAAADu//z/AAACAAEAAADt//z/AAACAAEAAADt//3/AAACAAEAAADs//3/AAACAAEAAADr//7/AAACAAEAAADq//7/AAACAAEAAADq////AAACAAEAAADr//3/AAACAAEAAADs//z/AAACAAEAAADq/wAAAAACAAEAAADw//z/AAACAAEAAAD4/wcAAAACAAEAAAD5/wcAAAACAAEAAAD6/wcAAAACAAEAAAD7/wcAAAACAAEAAAD8/wcAAAACAAEAAAD8/wkAAAACAAEAAAD7/wkAAAACAAEAAAD6/wkAAAACAAEAAAD5/wkAAAACAAEAAAD4/wkAAAACAAEAAAD3/wkAAAACAAEAAAD2/wkAAAACAAEAAAD1/wkAAAACAAEAAAD0/wkAAAACAAEAAADz/wkAAAACAAEAAADy/wkAAAACAAEAAADx/wcAAAACAAEAAADy/wcAAAACAAEAAADz/wcAAAACAAEAAAD6/wMAAAACAAEAAAD5/wMAAAACAAEAAAD4/wMAAAACAAEAAAD3/wMAAAACAAEAAAD2/wEAAAACAAEAAAAVAAMAAAACAAEAAAAVAAQAAAACAAEAAAAVAAUAAAACAAEAAAAWAAUAAAACAAEAAAAXAAUAAAACAAEAAAAXAAQAAAACAAEAAAAXAAMAAAACAAEAAAAWAAMAAAACAAEAAAAWAAQAAAACAAEAAAAOAPX/AAACAAEAAAAPAPX/AAACAAEAAAAQAPX/AAACAAEAAAAQAPb/AAACAAEAAAARAPb/AAACAAEAAAASAPb/AAACAAEAAAASAPf/AAACAAEAAAASAPj/AAACAAEAAAASAPn/AAACAAEAAAASAPr/AAACAAEAAAASAPv/AAACAAEAAAAVAPv/AAACAAEAAAAVAPz/AAACAAEAAAAVAP3/AAACAAEAAAAWAP3/AAACAAEAAAAWAP7/AAACAAEAAAAXAP3/AAACAAEAAAAXAPz/AAACAAEAAAAXAPv/AAACAAEAAAAXAPr/AAACAAEAAAAWAPr/AAACAAEAAAAVAPr/AAACAAEAAAAWAPv/AAACAAEAAAAWAPz/AAACAAEAAAAWAPn/AAACAAEAAAAWAPj/AAACAAEAAAAWAPf/AAACAAEAAAAWAPb/AAACAAEAAAAWAPX/AAACAAEAAAA=")
tile_set = SubResource("TileSet_3so38")
script = ExtResource("10_wxwew")
godot_4_3_compatibility = false
metadata/_custom_type_script = "uid://cjk8nronimk5r"

[node name="Dirt_Grass" type="TileMapLayer" parent="Tilemaps"]
material = ExtResource("8_3so38")
tile_map_data = PackedByteArray("AAABAP7/AAACAAEAAAABAP//AAACAAEAAAABAAAAAAACAAEAAAABAAEAAAACAAEAAAACAAEAAAACAAEAAAACAAAAAAACAAEAAAACAP//AAACAAEAAAAEAPz/AAACAAEAAAAFAPz/AAACAAEAAAAGAPz/AAACAAEAAAAHAPz/AAACAAEAAAAIAPz/AAACAAEAAAAJAPz/AAACAAEAAAAEAPv/AAACAAEAAAAEAPr/AAACAAEAAAAFAPv/AAACAAEAAAAFAPr/AAACAAEAAAAEAP3/AAACAAEAAAAEAP7/AAACAAEAAAAFAP7/AAACAAEAAAAFAP3/AAACAAEAAAAGAP3/AAACAAEAAAAKAPz/AAACAAEAAAALAPz/AAACAAEAAAAMAPz/AAACAAEAAAANAPz/AAACAAEAAAAOAPz/AAACAAEAAAANAAQAAAACAAEAAAAMAAQAAAACAAEAAAAMAAMAAAACAAEAAAANAAMAAAACAAEAAAAOAAMAAAACAAEAAAAOAAQAAAACAAEAAAALAAQAAAACAAEAAAAKAAQAAAACAAEAAAAJAAQAAAACAAEAAAAIAAQAAAACAAEAAAAHAAQAAAACAAEAAAAGAAQAAAACAAEAAAAFAAQAAAACAAEAAAAEAAQAAAACAAEAAAAEAAUAAAACAAEAAAAFAAUAAAACAAEAAAAFAAMAAAACAAEAAAAEAAMAAAACAAEAAAAEAAIAAAACAAEAAAAFAAIAAAACAAEAAAAGAAMAAAACAAEAAAAHAAMAAAACAAEAAAAIAAMAAAACAAEAAAALAAMAAAACAAEAAAAKAAMAAAACAAEAAAAJAAMAAAACAAEAAAD9/wYAAAACAAEAAAD+/wYAAAACAAEAAAD//wYAAAACAAEAAAABAAcAAAACAAEAAAABAAgAAAACAAEAAAACAAgAAAACAAEAAAACAAcAAAACAAEAAAD4//7/AAACAAEAAAD5//7/AAACAAEAAAD6//7/AAACAAEAAAD7//7/AAACAAEAAAD8//7/AAACAAEAAAD6////AAACAAEAAAD5////AAACAAEAAAD4////AAACAAEAAAD7////AAACAAEAAAD8////AAACAAEAAAD9////AAACAAEAAAD9/wAAAAACAAEAAAD9/wEAAAACAAEAAAD9/wIAAAACAAEAAAD8/wIAAAACAAEAAAD8/wEAAAACAAEAAAD8/wAAAAACAAEAAAD7/wAAAAACAAEAAAD6/wAAAAACAAEAAAD5/wAAAAACAAEAAAD5/wEAAAACAAEAAAD6/wEAAAACAAEAAAD7/wEAAAACAAEAAAD0/wEAAAACAAEAAAD1/wEAAAACAAEAAAD1/wMAAAACAAEAAAD2/wMAAAACAAEAAAD1/wcAAAACAAEAAAD2/wcAAAACAAEAAAD3/wcAAAACAAEAAAD0/wcAAAACAAEAAADu/wAAAAACAAEAAADu/wEAAAACAAEAAADu/wIAAAACAAEAAADu/wMAAAACAAEAAADu/wQAAAACAAEAAADt/wQAAAACAAEAAADt/wMAAAACAAEAAADt/wIAAAACAAEAAADt/wEAAAACAAEAAADv/wAAAAACAAEAAADv/wEAAAACAAEAAADv/wIAAAACAAEAAADv/wMAAAACAAEAAADv/wQAAAACAAEAAADw/wIAAAACAAEAAADw/wEAAAACAAEAAADw/wMAAAACAAEAAADx/wIAAAACAAEAAADx/wMAAAACAAEAAAD1//j/AAACAAEAAAD2//j/AAACAAEAAAD3//j/AAACAAEAAAD4//j/AAACAAEAAAD5//j/AAACAAEAAAD5//n/AAACAAEAAAD5//r/AAACAAEAAAD4//r/AAACAAEAAAD3//r/AAACAAEAAAD2//r/AAACAAEAAAD1//r/AAACAAEAAAD1//n/AAACAAEAAAD2//n/AAACAAEAAAD3//n/AAACAAEAAAD4//n/AAACAAEAAADu/wkAAAACAAEAAADv/wkAAAACAAEAAADw/wkAAAACAAEAAADx/wkAAAACAAEAAAA=")
tile_set = SubResource("TileSet_alh3a")
script = ExtResource("10_wxwew")
godot_4_3_compatibility = false
metadata/_custom_type_script = "uid://cjk8nronimk5r"

[node name="TileHighlighter" parent="." instance=ExtResource("8_dahhg")]

[node name="Machine" parent="." instance=ExtResource("4_b2bpf")]
position = Vector2(159, -21)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" parent="CanvasLayer" instance=ExtResource("5_b2bpf")]

[node name="MachineDashboard" parent="CanvasLayer" instance=ExtResource("9_bf53h")]
visible = false
